# lbscratch

./: CLAUDE.md  LICENSE  README.md  pre-commit-config.yaml  pyproject.toml  setup.py  tbump.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml
lbscratch/: pygridder.py  stimela_cabs.yaml  utils.py
lbscratch/parser/: bsmooth.yaml  chanflags.yaml  clip_gain_amps.yaml  flagger.yaml  gainspector.yaml  gsmooth.yaml  hess_psf.yaml  hpass_clean.yaml  hthresh.yaml  ift2qc.yaml  restimator.yaml  schemas.py
lbscratch/workers/: bsmooth.py  chanflags.py  clip_gain_amps.py  delay_init.py  flagger.py  flautos.py  fledges.py  gainspector.py  gsmooth.py  hess_psf.py  hpass_clean.py  hthresh.py  ift2qc.py  main.py  multi_forward.py  restimator.py  zarr2fits.py
tests/: conftest.py  test_delay_init.py
